# csdfs

./: README.md  cli.py  csdfs_cli.py
api/: server.py  stream.py
core/: energy.py  langevin.py  operators.py
csdfs/: pyproject.toml
docs/: architecture.md  dashboard_guide.md  index.md  introduction.md  ray_cluster_guide.md  spectral_theory.md
frontend/src/: App.jsx
frontend/src/components/: PhaseSpace.jsx
frontend/src/hooks/: useWS.js
paper_engine/: build_paper.py
ray_cluster/: cluster.py  node.py
reviewer/: reviewer_sim.py
scripts/: csdfs_up.py
spectral/: detection.py
